syntax = "proto3";

package app;

service FilesService {
	rpc ReadFile (FileInput) returns (FileOutput);
}

message FileInput {
	string path = 1;
}

message FileOutput {
	bytes data = 1;
	Error error = 2;
}

message Error {
	int32 code = 1;
	string message = 2;
}